[package]
name = "tile_pussle_wasm"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "^0.19.3"
rand = "^0.8"
getrandom = { version = "0.2", features = ["js"] }
wasm-logger = "0.2.0"
log = "0.4.14"